--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-<title>杨云帆的个人简历1 - Frontend Developer</title>
+<title>杨云帆的个人简历 - Frontend Developer</title>
 <meta name="keywords" content="杨云帆,前端,工程师,简历,求职,resume,job,web,frontend,html,html5,css,css3,javascript">
 <meta name="description" content="杨云帆的个人简历">
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
